# nix-flake-parts-lint

./: .nix-lint.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  result
.github/workflows/: ci.yml
nix/: default.nix
src/nix-lint/: Cargo.toml
src/nix-lint-core/: Cargo.toml
src/nix-lint-core/src/: lib.rs
src/nix-lint-macros/: Cargo.toml
src/nix-lint-macros/src/: lib.rs  metadata.rs
src/nix-lint-rules/: Cargo.toml
src/nix-lint-rules/src/: bool_equals_true.rs  lib.rs  no_any_type.rs  no_builtin_readfile_secrets.rs  no_cross_module_option_reads.rs  no_cross_namespace_writes.rs  no_defaults.rs  no_firewall_disable.rs  no_lookup_path.rs  no_missing_description.rs  no_mkdefault.rs  no_mkforce.rs  no_mkif_true.rs  no_nix_env.rs  no_optional.rs  no_rec.rs  no_secrets.rs  no_with_pkgs_lib.rs  one_program_per_part.rs  require_assertions.rs  require_flake_parts.rs
src/nix-lint/src/: main.rs  registry.rs
src/nix-lint/tests/: integration_tests.rs
test-fixtures/: bool-equals-true.nix  no-any-type.nix  no-builtin-readfile.nix  no-defaults.nix  no-firewall-disable.nix  no-lookup-path.nix  no-missing-description.nix  no-mkdefault.nix  no-mkforce.nix  no-mkif-true.nix  no-nix-env.nix  no-optional.nix  no-rec.nix  no-secrets.nix  no-with-pkgs.nix
