[workspace]
resolver = "3"
members = [
    "src/nix-lint-core",
    "src/nix-lint-macros",
    "src/nix-lint-rules",
    "src/nix-lint",
]

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
